<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aluno.splashscreen.TelaRespostaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TelaResposta"
            tools:layout_editor_absoluteX="41dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nomeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nome" />

                <TextView
                    android:id="@+id/camposNomeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Vazio" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/idadeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IdadeString"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="58dp" />

                <TextView
                    android:id="@+id/camposIdadeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Vazio" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sexoId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sexo" />

                <TextView
                    android:id="@+id/camposSexoId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Vazio" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cursoId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Curso" />

                <TextView
                    android:id="@+id/camposCursoId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Vazio" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
